# PolePosition

./: README.md  sockserver.c
ClienteGui/: build.xml
ClienteGui/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
ClienteGui/nbproject/private/: private.properties
ClienteGui/src/clientegui/: ClienteGui.java  SimpleSocketClient.java
GUI/: build.xml  codenameone_settings.properties
polePositionCR/: CMakeLists.txt  Node.cpp  Node.h  accesorio.cpp  accesorio.h  auto.cpp  auto.h  gamecontroller.cpp  gamecontroller.h  hoyo.cpp  hoyo.h  listaenlazada.cpp  listaenlazada.h  turbo.cpp  turbo.h  vida.cpp  vida.h
